[gd_scene load_steps=10 format=3 uid="uid://dvi663fhm7t8l"]

[ext_resource type="Script" uid="uid://2vh3os4elj78" path="res://scripts/protector_enemy.gd" id="1_mu5ik"]
[ext_resource type="Texture2D" uid="uid://cx0dced818yq4" path="res://assets/textures/protector.png" id="2_w3q1s"]
[ext_resource type="AudioStream" uid="uid://5glkty1fvi85" path="res://assets/sounds/glass.mp3" id="3_esjt8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_esjt8"]
atlas = ExtResource("2_w3q1s")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdsqo"]
atlas = ExtResource("2_w3q1s")
region = Rect2(24, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lnuev"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_esjt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdsqo")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bx1yj"]
size = Vector2(80, 80)

[sub_resource type="CircleShape2D" id="CircleShape2D_w3q1s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uvu0f"]
radius = 1222.0981

[node name="ProtectorEnemy" type="CharacterBody2D"]
z_index = 2
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 27
script = ExtResource("1_mu5ik")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(4.5, 4.5)
sprite_frames = SubResource("SpriteFrames_lnuev")
animation = &"walk"
frame_progress = 0.4377332

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bx1yj")

[node name="Freeze" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="Reach" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Reach"]
scale = Vector2(108.793, 108.793)
shape = SubResource("CircleShape2D_w3q1s")

[node name="ProtectCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="Vision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_uvu0f")

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_esjt8")

[connection signal="timeout" from="ProtectCooldown" to="." method="_on_protect_cooldown_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
